refactor: Use snake_case for button IDs

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div>
-    <button id="opggBtn">op.gg</button>
-    <button id="uggBtn">u.gg</button>
+    <button id="opgg_btn">op.gg</button>
+    <button id="ugg_btn">u.gg</button>
   </div>
   <script src="popup.js"></script>
 </body>
