feat: Add xdx.gg support

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
   <div>
     <button id="opgg_btn">op.gg</button>
     <button id="ugg_btn">u.gg</button>
+    <button id="xdx_btn">xdx.gg</button>
   </div>
   <script src="popup.js"></script>
 </body>
