refactor: Split up each website into its own module

--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,6 @@
     <button id="ugg_btn">u.gg</button>
     <button id="xdx_btn">xdx.gg</button>
   </div>
-  <script src="popup.js"></script>
+  <script src="popup.js" type="module"></script>
 </body>
 </html>
