feat: Add leagueofgraphs support

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,7 @@
     <button id="opgg_btn">op.gg</button>
     <button id="ugg_btn">u.gg</button>
     <button id="xdx_btn">xdx.gg</button>
+    <button id="leagueofgraphs_btn">LeagueOfGraphs.com</button>
   </div>
   <script src="popup.js" type="module"></script>
 </body>
