--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
     <button id="ugg_btn">u.gg</button>
     <button id="xdx_btn">xdx.gg</button>
     <button id="leagueofgraphs_btn">LeagueOfGraphs.com</button>
+    <button id="mobalytics_btn">mobalytics.gg</button>
   </div>
   <script src="popup.js" type="module"></script>
 </body>
