feat: Add deeplol support

--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,7 @@
     <button id="xdx_btn">xdx.gg</button>
     <button id="leagueofgraphs_btn">LeagueOfGraphs.com</button>
     <button id="mobalytics_btn">mobalytics.gg</button>
+    <button id="deeplol_btn">deeplol.gg</button>
   </div>
   <script src="popup.js" type="module"></script>
 </body>
