feat(ui): Increase button size

--- a/popup.html
+++ b/popup.html
@@ -3,18 +3,21 @@
 <head>
   <title>Extension Popup</title>
   <style>
-    /* Add your custom CSS styles here */
+    .button {
+      font-size: 20px;
+      padding: 5px 5px;
+    }
   </style>
   <script src="popup.js"></script>
 </head>
 <body>
   <div>
-    <button id="opgg_btn">op.gg</button>
-    <button id="ugg_btn">u.gg</button>
-    <button id="xdx_btn">xdx.gg</button>
-    <button id="leagueofgraphs_btn">LeagueOfGraphs.com</button>
-    <button id="mobalytics_btn">mobalytics.gg</button>
-    <button id="deeplol_btn">deeplol.gg</button>
+    <button id="opgg_btn" class="button">op.gg</button>
+    <button id="ugg_btn" class="button">u.gg</button>
+    <button id="xdx_btn" class="button">xdx.gg</button>
+    <button id="leagueofgraphs_btn" class="button">LeagueOfGraphs.com</button>
+    <button id="mobalytics_btn" class="button">mobalytics.gg</button>
+    <button id="deeplol_btn" class="button">deeplol.gg</button>
   </div>
   <script src="popup.js" type="module"></script>
 </body>
