feat: Add functionality to open summoner in lol-lp

--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,7 @@
     <button id="leagueofgraphs_btn" class="button">LeagueOfGraphs.com</button>
     <button id="mobalytics_btn" class="button">mobalytics.gg</button>
     <button id="deeplol_btn" class="button">deeplol.gg</button>
+    <button id="lollp_btn" class="button">lol-lp</button>
   </div>
   <script src="popup.js" type="module"></script>
 </body>
